[package]
name = "rust_kvs_log"
version = "0.1.0"
edition = "2024"

[dependencies]
assert_cmd = "2.0.17"
clap = { version = "4.5.39", features = ["derive"] }
predicates = "3.1.3"
tempfile = "3.0.7"
walkdir = "2.2.7"
log = "0.4.27"
simple_logger = "5.0.0"
criterion = "0.6.0"
rand = "0.9.1"

[lib]
test = false
doctest = false
