[package]
name = "rust_kvs_server"
version = "0.1.0"
edition = "2024"

[dependencies]
assert_cmd = "2.0.17"
clap = { version = "4.5.49", features = ["derive"] }
tempfile = "3.23.0"
walkdir = "2.2.7"
log = "0.4.28"
simple_logger = "5.0.0"
sled = "0.34.7"
predicates = "3.1.3"
scopeguard = "1.2.0"
serial_test = "3.2.0"
rstest = "0.26.1"
criterion = "0.7.0"
rand = "0.9.2"
crossbeam = "0.8.4"
num_cpus = "1.17.0"
rayon = "1.11.0"

[lib]
test = false
doctest = false

[[bench]]
name = "kvs"
harness = false

[[bench]]
name = "sled"
harness = false
