[package]
name = "rust_kvs_async_server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
log = "0.4.28"
simple_logger = "5.0.0"
tokio = { version = "1.40", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Dev dependencies
assert_cmd = "2.0.17"
tempfile = "3.23.0"
walkdir = "2.2.7"
predicates = "3.1.3"
scopeguard = "1.2.0"
serial_test = "3.2.0"
rstest = "0.26.1"
criterion = "0.7.0"
rand = "0.9.2"

[lib]
test = false
doctest = false

[[bench]]
name = "kvs"
harness = false

[[bench]]
name = "sled"
harness = false
